--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4,6 +4,7 @@
 }
 body {
   font-size: 18px;
+  font-family: 'Oswald', sans-serif;
 }
 img {
   max-width: 100%;
@@ -12,7 +13,7 @@ article {
   width: 100%;
 }
 a {
-  color: #000;
+  color: #840202;
   text-decoration: none;
 }
 a:hover {
@@ -66,7 +67,7 @@ a:hover {
   width: 49%;
 }
 nav {
-  background-color: #555;
+  background-color: rgba(132,2,2,0.9);
   text-align: center;
   font-size: 1.1em;
   position: fixed;
@@ -132,7 +133,7 @@ nav a:hover {
 }
 .intro .img-container img {
   border-radius: 5px;
-  border: 1px solid #000;
+  border: 2px solid #840202;
 }
 .intro h1 {
   text-align: left;
@@ -146,9 +147,6 @@ nav a:hover {
 }
 .intro .info .list-item {
   line-height: 2em;
-}
-.intro .info a {
-  text-decoration: underline;
 }
 .intro .buttons {
   position: absolute;
