--- a/static/css/main.styl
+++ b/static/css/main.styl
@@ -6,6 +6,7 @@
 
 body 
     font-size: 18px
+    font-family: 'Oswald', sans-serif;
 
 img 
     max-width: 100%
@@ -14,7 +15,7 @@ article
     width: 100%
 
 a 
-    color: black
+    color: #840202
     text-decoration: none
 
 a:hover 
@@ -70,7 +71,7 @@ a:hover
 // +widgets
 
 nav
-    background-color: #555555
+    background-color: rgba(132, 2, 2, 0.9)
     text-align: center
     font-size: 1.1em
     position: fixed
@@ -130,7 +131,7 @@ nav
 
         img
             border-radius: 5px
-            border: 1px solid black
+            border: 2px solid #840202
     
     h1
         text-align: left
@@ -146,8 +147,8 @@ nav
         .list-item
             line-height: 2em
 
-        a
-            text-decoration: underline
+        // a
+        //     text-decoration: underline
 
     
     .buttons
