--- a/static/css/main.styl
+++ b/static/css/main.styl
@@ -56,7 +56,8 @@ a:hover
     width: 40px
     height: 40px
     display: inline-block
-    background-color: black;
+    // background-color: black;
+    background-size: 100%
 
     &.fb
         background-image: url("/imgs/facebook.png")
@@ -64,6 +65,8 @@ a:hover
         background-image: url("/imgs/leetcode.png")
     &.github
         background-image: url("/imgs/github.svg")
+    &.linkedin
+        background-image: url("/imgs/linkedin.png")
 
 .half
     display: inline-block
@@ -71,10 +74,11 @@ a:hover
 // +widgets
 
 nav
-    background-color: rgba(132, 2, 2, 0.9)
+    background-color: rgb(132, 2, 2)
     text-align: center
     font-size: 1.1em
     position: fixed
+    z-index: 10000
     width: 100%
     top: 0
     
@@ -178,7 +182,7 @@ nav
                 margin-top: 0
 
 .tech
-    background-color: #eee
+    background-color: #f4f4f4
 
     .list
         &>.list-item
