--- a/static/css/main.styl
+++ b/static/css/main.styl
@@ -60,13 +60,13 @@ a:hover
     background-size: 100%
 
     &.fb
-        background-image: url("/imgs/facebook.png")
+        background-image: url("/imgs/facebook.svg")
     &.leetcode
         background-image: url("/imgs/leetcode.png")
     &.github
         background-image: url("/imgs/github.svg")
     &.linkedin
-        background-image: url("/imgs/linkedin.png")
+        background-image: url("/imgs/linkedin.svg")
 
 .half
     display: inline-block
