--- a/static/css/main.styl
+++ b/static/css/main.styl
@@ -38,6 +38,14 @@ a:hover
     .list-item
         margin: 0
         padding: 0
+        line-height: 1.7em
+
+        &>.list
+            list-style-type disc
+            text-align: left
+            padding-left: 45px
+            .list-item
+                text-align: left 
 
     &.list-horizontal
         vertical-align: top
@@ -197,3 +205,21 @@ nav
     .list
         .list-item
             vertical-align: top
+
+.achievements
+    background-color: #f4f4f4
+
+    .list
+        width: 640px
+        max-width: 100%
+        display inline-block
+        text-align: left
+
+        .list-item
+        p
+            text-align: left
+        
+        .list
+            display inline-block
+
+    
