--- a/static/css/main.css
+++ b/static/css/main.css
@@ -215,3 +215,48 @@ nav a:hover {
 .achievements .list .list {
   display: inline-block;
 }
+@media only screen and (max-width: 768px) {
+  .intro {
+    display: block;
+  }
+  .img-container,
+  .info {
+    display: inline-block;
+  }
+  .img-container .buttons,
+  .info .buttons {
+    bottom: -55px;
+  }
+  .work {
+    text-align: center;
+  }
+  .work .list {
+    list-style-type: none !important;
+  }
+}
+@media only screen and (max-width: 425px) {
+  .intro h1 {
+    text-align: center;
+  }
+  .intro .img-container,
+  .intro .info {
+    display: block;
+    width: 100%;
+    text-align: center;
+    padding: 0;
+  }
+  .intro .img-container .buttons,
+  .intro .info .buttons {
+    margin-top: 40px;
+    position: static;
+  }
+  nav .list-item {
+    font-size: 1rem !important;
+  }
+  .list.list-equal-5>.list-item {
+    width: 48% !important;
+  }
+  .list.list-equal-5>.list-item.wide {
+    width: 100% !important;
+  }
+}
