Mobile fixed some bugs

--- a/static/css/main.styl
+++ b/static/css/main.styl
@@ -89,6 +89,7 @@ nav
     z-index: 10000
     width: 100%
     top: 0
+    text-transform: uppercase
     
     .list 
         display: inline-block
@@ -261,3 +262,7 @@ nav
         width: 48% !important
         &.wide
             width: 100% !important
+
+    .achievements
+        .list
+            max-width: 90%
