--- a/static/css/main.css
+++ b/static/css/main.css
@@ -86,6 +86,7 @@ nav {
   z-index: 10000;
   width: 100%;
   top: 0;
+  text-transform: uppercase;
 }
 nav .list {
   display: inline-block;
@@ -258,5 +259,8 @@ nav a:hover {
   }
   .list.list-equal-5>.list-item.wide {
     width: 100% !important;
+  }
+  .achievements .list {
+    max-width: 90%;
   }
 }
