Mobile fixed some bugs

--- a/static/css/main.styl
+++ b/static/css/main.styl
@@ -257,7 +257,9 @@ nav
                 position: static
     nav
         .list-item 
-            font-size: 1rem !important
+            font-size: 0.7rem !important
+            a
+                padding: 5px 10px
     .list.list-equal-5>.list-item
         width: 48% !important
         &.wide
