--- a/static/css/main.css
+++ b/static/css/main.css
@@ -252,7 +252,10 @@ nav a:hover {
     position: static;
   }
   nav .list-item {
-    font-size: 1rem !important;
+    font-size: 0.7rem !important;
+  }
+  nav .list-item a {
+    padding: 5px 10px;
   }
   .list.list-equal-5>.list-item {
     width: 48% !important;
