--- a/static/css/main.styl
+++ b/static/css/main.styl
@@ -133,6 +133,11 @@ nav
 
 .intro
     background-color: #ccc
+    background-image: url(/imgs/background.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
     display: table
 
     .img-container
