--- a/static/css/main.styl
+++ b/static/css/main.styl
@@ -6,20 +6,26 @@
 
 body 
     font-size: 18px
+    font-family: 'Open Sans', sans-serif;
+
+h1
+h2
+h3
+h4
+h5
+h6
     font-family: 'Oswald', sans-serif;
 
 img 
+    width: 300px
     max-width: 100%
 
 article 
     width: 100%
 
 a 
-    color: #840202
-    text-decoration: none
-
-a:hover 
-    text-decoration: underline
+    color: inherit;
+    transition: all .2s
 
 // -resets
 
@@ -82,7 +88,7 @@ a:hover
 // +widgets
 
 nav
-    background-color: rgb(132, 2, 2)
+    background-color:#404040
     text-align: center
     font-size: 1.1em
     position: fixed
@@ -97,14 +103,16 @@ nav
 
         .list-item 
             font-size: 1.3rem
-            border-left: 2px solid rgba(255, 255, 255, 0.7)
+            border-left: 1px solid rgba(255, 255, 255, 0.3)
             &:last-of-type 
-                border-right: 2px solid rgba(255, 255, 255, 0.7)
+                border-right: 1px solid rgba(255, 255, 255, 0.3)
     a
         color: white
+        text-decoration: none
         display: inline-block
         margin: 0
         padding: 10px 15px
+        transition: all .2s
 
         &:hover 
             background-color: rgba(255, 255, 255, 0.3)
@@ -114,31 +122,43 @@ nav
     width:  100%
     max-width: 960px
     margin: 0 auto
-    padding: 75px 20px;
+    padding: 45px 0;
+    padding-top: 80px
 
-
-    h3
-    h4
-        margin-top: 10px
     h1
-        font-size: 1.8em
+        font-size: 2.6em
         text-align: center
-        margin-bottom: 45px
+        margin-bottom: 20px
+        color: #bd2438;
+        text-transform: uppercase;
+
     h2
-        font-size: 1.4em
+        font-size: 2.2em;
+        font-weight: normal;
+        border-bottom: 1px solid #ddd;
+        margin-bottom: 10px;
+        line-height: normal;
+
     h3
-        font-size: 1.2em
+        font-size: 1.3em;
+        font-weight: normal;
+
     h4
-        font-size: 1.1em
+        font-size: 1.1em;
+        font-weight: normal;
+        opacity: 0.7;
+    
+    a:hover
+        color: #bd2438;
 
 .intro
-    background-color: #ccc
     background-image: url(/imgs/background.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
     display: table
+    color: #fff
 
     .img-container
     .info
@@ -148,11 +168,12 @@ nav
         width: 40%
 
         img
-            border-radius: 5px
-            border: 2px solid #840202
+            border-radius: 50%
     
     h1
         text-align: left
+        color: #fff
+        text-transform: none
     .info
         vertical-align: top
         position relative
@@ -163,7 +184,8 @@ nav
         font-size: 1.5em
 
         .list-item
-            line-height: 2em
+            line-height: 1.6em
+            font-size: 0.8em
 
         // a
         //     text-decoration: underline
@@ -171,7 +193,10 @@ nav
     
     .buttons
         position: absolute
-        bottom: 0
+        bottom: -25px;
+        padding-top: 40px;
+    a:hover
+        color: #bd2438;
 
 .work
     h2
@@ -197,7 +222,14 @@ nav
                 margin-top: 0
 
 .tech
-    background-color: #f4f4f4
+    background: #bd2438
+    color: #fff
+
+    h1
+        color: #fff
+
+    h2
+        border-color: #d25c6c;
 
     .list
         &>.list-item
@@ -214,11 +246,16 @@ nav
             vertical-align: top
 
 .achievements
-    background-color: #f4f4f4
+    background-image: url(../imgs/background.jpg)
+    background-position: center
+    background-repeat: no-repeat
+    background-size: cover
+    background-attachment: fixed
+    color: #fff
 
     .list
-        width: 640px
-        max-width: 100%
+        width: 100%
+        max-width: 640px
         display inline-block
         text-align: left
 
@@ -229,6 +266,8 @@ nav
         .list
             display inline-block
 
+    h1
+        color: #fff
     
 @media only screen and (max-width: 768px)
     .intro
@@ -261,6 +300,7 @@ nav
             .buttons
                 margin-top: 40px;
                 position: static
+                padding-top: 40xp
     nav
         .list-item 
             font-size: 0.7rem !important
