Added a link to CV

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -80,6 +80,10 @@ a {
 .icon.linkedin {
   background-image: url("/imgs/linkedin.svg");
 }
+.icon.www {
+  background-image: url("/imgs/www.jpeg");
+  border-radius: 5px;
+}
 .half {
   display: inline-block;
   width: 49%;
