--- a/static/css/main.styl
+++ b/static/css/main.styl
@@ -81,6 +81,9 @@ a
         background-image: url("/imgs/github.svg")
     &.linkedin
         background-image: url("/imgs/linkedin.svg")
+    &.www
+        background-image: url("/imgs/www.jpeg")
+        border-radius: 5px
 
 .half
     display: inline-block
