Applied last CSS prettifiers

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6,7 +6,12 @@ body {
   font-size: 18px;
   font-family: 'Open Sans', sans-serif;
 }
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: 'Oswald', sans-serif;
 }
 img {
@@ -18,7 +23,7 @@ article {
 }
 a {
   color: inherit;
-  transition: all .2s;
+  transition: all 0.2s;
 }
 .text-center {
   text-align: center;
@@ -64,16 +69,20 @@ a {
   background-size: 100%;
 }
 .icon.fb {
-  background-image: url("../imgs/facebook.svg");
+  background-image: url("/imgs/facebook.svg");
 }
 .icon.leetcode {
-  background-image: url("../imgs/leetcode.png");
+  background-image: url("/imgs/leetcode.png");
 }
 .icon.github {
-  background-image: url("../imgs/github.svg");
+  background-image: url("/imgs/github.svg");
 }
 .icon.linkedin {
-  background-image: url("../imgs/linkedin.svg");
+  background-image: url("/imgs/linkedin.svg");
+}
+.icon.www {
+  background-image: url("/imgs/www.jpeg");
+  border-radius: 5px;
 }
 .half {
   display: inline-block;
@@ -106,7 +115,7 @@ nav a {
   display: inline-block;
   margin: 0;
   padding: 10px 15px;
-  transition: all .2s;
+  transition: all 0.2s;
 }
 nav a:hover {
   background-color: rgba(255,255,255,0.3);
@@ -119,7 +128,6 @@ nav a:hover {
   padding: 45px 0;
   padding-top: 80px;
 }
-
 .content h1 {
   font-size: 2.6em;
   text-align: center;
@@ -147,7 +155,7 @@ nav a:hover {
   color: #bd2438;
 }
 .intro {
-  background-image: url(../imgs/background.jpg);
+  background-image: url("/imgs/background.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -183,10 +191,11 @@ nav a:hover {
 }
 .intro .buttons {
   position: absolute;
-  bottom: 0;
+  bottom: -25px;
+  padding-top: 40px;
 }
 .intro a:hover {
-  color: #fff;
+  color: #bd2438;
 }
 .work h2,
 .work h3,
@@ -209,7 +218,6 @@ nav a:hover {
 .work .list .list-item .list-item {
   margin-top: 0;
 }
-
 .tech {
   background: #bd2438;
   color: #fff;
@@ -217,7 +225,6 @@ nav a:hover {
 .tech h1 {
   color: #fff;
 }
-
 .tech h2 {
   border-color: #d25c6c;
 }
@@ -228,12 +235,11 @@ nav a:hover {
   margin: 0;
   line-height: 1.7em;
 }
-
 .education .list .list-item {
   vertical-align: top;
 }
 .achievements {
-  background-image: url(../imgs/background.jpg);
+  background-image: url("../imgs/background.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -260,9 +266,9 @@ nav a:hover {
   body {
     font-size: 0.9em;
   }
-  nav .list,
-  nav .list .list-item {
-    font-size: 1em;
+  nav .list .list-item,
+  .list .list-item {
+    font-size: 1rem;
   }
   .intro {
     display: block;
@@ -273,17 +279,12 @@ nav a:hover {
     font-size: 2em;
     line-height: 1.2em;
   }
-  .img-container,
-  .info {
-    display: inline-block;
-  }
   .intro .img-container {
     width: 35%;
   }
-
-  .img-container .buttons,
-  .info .buttons {
-    bottom: -55px;
+  .img-container,
+  .info {
+    display: inline-block;
   }
   .work {
     text-align: center;
@@ -306,18 +307,20 @@ nav a:hover {
     width: 100%;
     text-align: center;
     padding: 0;
-  }
-  .intro .info,
-  .intro .info .list-item {
     font-size: 1em;
   }
-  .intro .img-container {
+  .intro .img-container .img-container,
+  .intro .info .img-container {
     max-width: 200px;
     margin: 0 auto;
   }
+  .intro .img-container .list-item,
+  .intro .info .list-item {
+    font-size: 1em;
+  }
   .intro .img-container .buttons,
   .intro .info .buttons {
-    margin-top: 40px;
+    margin-top: 0;
     position: static;
   }
   nav .list-item {
@@ -329,14 +332,17 @@ nav a:hover {
   .list.list-equal-5>.list-item {
     width: 100% !important;
   }
-  .list.list-equal-5>.list-item.wide {
-    width: 100% !important;
+  .tech .list.list-equal-5>.list-item {
+    width: 47% !important;
   }
-  .achievements .list {
-    max-width: 90%;
+  .tech .list.list-equal-5>.list-item.wide {
+    width: 100% !important;
   }
   .list .list-item>.list {
     box-sizing: border-box;
+  }
+  .achievements .list {
+    max-width: 90%;
   }
   .half {
     width: 100%;
