Added hacker rank profile

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -84,6 +84,10 @@ a {
   background-image: url("/imgs/www.jpeg");
   border-radius: 5px;
 }
+.icon.hackerrank {
+  background-image: url("/imgs/hackerrank.jpg");
+  border-radius: 5px;
+}
 .half {
   display: inline-block;
   width: 49%;
