--- a/static/css/main.styl
+++ b/static/css/main.styl
@@ -84,6 +84,10 @@ a
     &.www
         background-image: url("/imgs/www.jpeg")
         border-radius: 5px
+    &.hackerrank
+        background-image: url("/imgs/hackerrank.jpg")
+        border-radius: 5px
+
 
 .half
     display: inline-block
